??? Duncan Ferguson <duncan_ferguson@user.sf.net> - v3.26-1

* Allow user to set a different ConnectTimeout and -o string (Tony Mancill)
* Fix warning from 'mandb' (Tony Mancill)
* Continue connecting to unresolvable hosts (debian bug 499935) (Tony Mancill)
* Correct bug with unset default ports (Tony Mancill)
* Rearrange pod documentation to remove extraenous comment (Tony Mancill)

2009-03-26 Duncan Ferguson <duncan_ferguson@user.sf.net> - v3.25-1

* Add patch from David F. Skoll for adding colour to terminals
* Apply fix from Bogdan Pintea for DNS failing to resolve IPs
* Allow the configuration files to be symlinks (debian bug 518196)
* Add an 'EXAMPLES' section to the cssh documentation
* List options alphabetically in documentation
* Apply patch from Gerfried Fuchs/Tony Mancill for ports on the command line

2008-11-14 Duncan Ferguson <duncan_ferguson@user.sf.net> - v3.24-1

* Do not attempt to re-resolve IP addresses
* Apply patch from Dan Wallis
- Add '-C <file>' command to load in specific config file
- Typo correct in pod
- Cope with random/strange config files better
* Correct some minor typos
* Create the .csshrc file if it doesnt already exist and amend pod
* Amend host menu items to be a little more descriptive
* Remove 'Catpure Terminal' from Hosts menu as it doesnt do anything useful

2008-01-23 Duncan Ferguson <duncan_ferguson@user.sf.net> - v3.23-1

* Apply bugfix supplied by Jima
- Ensure loading of hosts from user ssh config file is case insensitive

2008-01-23 Duncan Ferguson <duncan_ferguson@user.sf.net> - v3.22-1

* Update X resources class to allow use of terms other than XTerm
* Apply patch from Harald Weidner to stop error messages in Debian Etch
* Add in key shortcut (alt-h) to toggle history window
* Tidy up pod a little to highlight notes better
* Check terminal_font config for quotes and remove
* Enable use of "configure --sysconfdir=", defaults to /etc
* Revise host checking algorithm to take ssh_config files into account